--- a/views/pizza.html
+++ b/views/pizza.html
@@ -3,6 +3,7 @@
 <head>
 <link rel=stylesheet href=css/style.css>
 <link rel=stylesheet href=css/bootstrap-grid.css>
+<link rel=stylesheet href=css/media.css media="min-width: 1200px">
 <link href=css/mobile.css rel=stylesheet media="max-width: 480px">
 </head>
 <body>
