--- a/views/pizza.html
+++ b/views/pizza.html
@@ -4,7 +4,7 @@
 <link rel=stylesheet href=css/style.css>
 <link rel=stylesheet href=css/bootstrap-grid.css>
 <link rel=stylesheet href=css/media.css media="min-width: 1200px">
-<link href=css/mobile.css rel=stylesheet media="max-width: 480px">
+<link href=css/media.css rel=stylesheet media="max-width: 480px">
 </head>
 <body>
 <div class=container>
@@ -139,3 +139,4 @@
 </body>
 </html>
 </html>
+
