--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,4 @@ html{font-size:100%;overflow-y:scroll;-webkit-tap-highlight-color:rgba(0,0,0,0);
   body { font-size: 12px;}
   header p { padding-left: 4.5em;}
 }
+.fix {width:100px;} 
